<resources>
    <string name="app_name">Soundboard?</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="pewdiepie">PewDiePie</string>
    <string name="misc">Misc</string>
    <string name="star_wars">Star Wars</string>
    <string name="big_shaq">Big Shaq</string>
    <string name="nav_header1">Descriptions? Really?</string>
    <string name="nav_header2">I don\'t know. Stop asking me stuff.</string>
    <string name="home">Home</string>
    <string name="title_activity_main2">Main2Activity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
