<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_nothot"
            android:icon="@drawable/ic_menu_bigshaq"
            android:title="@string/big_shaq" />
        <item
            android:id="@+id/nav_starwars"
            android:icon="@drawable/ic_menu_starwars"
            android:title="@string/star_wars" />
        <item
            android:id="@+id/nav_pewdiepie"
            android:icon="@drawable/ic_menu_pewdiepie"
            android:title="@string/pewdiepie" />
        <item
            android:id="@+id/nav_misc"
            android:icon="@drawable/ic_menu_misc"
            android:title="@string/misc" />

    </group>

</menu>
